@@ -50,6 +50,13 @@ foreach ($my_calendars as $calendar) {
     $calendars[$calendar->getName()] = $calendar;
     $sorted_calendars[$calendar->getName()] = $calendar->get('name');
 }
+if (Horde_Auth::isAdmin()) {
+    $system_calendars = $kronolith_shares->listSystemShares();
+    foreach ($system_calendars as $calendar) {
+        $calendars[$calendar->getName()] = $calendar;
+        $sorted_calendars[$calendar->getName()] = $calendar->get('name');
+    }
+}
 $remote_calendars = unserialize($prefs->getValue('remote_cals'));
 foreach ($remote_calendars as $calendar) {
     $calendars[$calendar['url']] = $calendar;
